--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
