--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "@mui/x-data-grid": "^5.17.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "recharts": "^2.4.3"
   },
   "devDependencies": {
