--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.8.1",
     "recharts": "^2.4.3",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
