--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "firebase": "^9.18.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -24,7 +25,8 @@
     "recharts": "^2.4.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.8",
-    "timeago.js": "^4.0.2"
+    "timeago.js": "^4.0.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
