--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "admin",
+  "homepage": "https://mohammedkhaled15.github.io/admin-dashboard",
+  "name": "admin-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "vite build",
     "preview": "vite preview"
   },
