--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "firebase": "^9.18.0",
     "formik": "^2.2.9",
+    "formik-devtools-extension": "^0.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
